# CCClock

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  nums.txt  vcpkg.json
assets/: generate_test_data.py  snake_config.json  test_clock_config.json
assets/ascii_fonts/: ascii_num.json  simple_ascii_num.json
assets/config/: app_config.json
assets/config/ascii_fonts/: ascii_num.json  ascii_num1.json  single_color_num.json
assets/config/menu_config/: menu_theme_config.json  menu_theme_pinkblue.json  menu_theme_vivid.json
build-bench/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
docs/: menu_config.md
include/: clk_app_config.h  clk_ascii_render.h  clk_audio.h  clk_clock.h  clk_clock_menu.h  clk_file_util.h  clk_fs_watch.h  clk_json.h  clk_key_io.h  clk_menu.h  clk_menu_instance.h  clk_menu_theme.h  clk_render.h  clk_term.h  clk_time.h
sandbox/: audio_demo.c  clock_demo.c  clock_sched_demo.c  json_benchmark.c  key_io_demo.c  main.c  menu_demo.c
src/: clk_app_config.c  clk_ascii_render.c  clk_audio.c  clk_clock.c  clk_clock_menu.c  clk_file_util.c  clk_fs_watch.c  clk_json.c  clk_key_io.c  clk_menu.c  clk_menu_instance.c  clk_menu_theme.c  clk_render.c  clk_term.c  clk_time.c  main.c
test/: test_app_config.c  test_app_config.json  test_audio.c  test_clock.c  test_clock_config.json  test_clock_menu.c  test_clock_sched.c  test_fs.c  test_json.c  test_key_io.c  test_menu.c  test_menu_instance.c  test_menu_theme.c  test_term.c  test_utils.h
